--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -96,8 +96,8 @@ const optimizedDesktopImage = await getOptimizedImage(desktopImage);
                 display: block;
                 height: 100%;
                 width: 100%;
-                background: #291a13;
-                opacity: 0.8;
+                background: #091a0c;
+                opacity: 0.7;
                 top: 0;
                 left: 0;
                 z-index: 1;
