--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -501,7 +501,7 @@ import Settings from "./TemplateComponents/Settings.astro";
         margin: 0;
         box-sizing: border-box;
         padding: 0 (24/16rem) 0 (24/16rem);
-        background-color: var(--primary);
+        background-color: var(--secondary);
         opacity: 0;
         display: flex;
         visibility: hidden;
@@ -589,7 +589,7 @@ import Settings from "./TemplateComponents/Settings.astro";
         background-color: #fff;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 10px 16px;
         opacity: 0;
-        border-bottom: 5px solid var(--primary);
+        border-bottom: 5px solid var(--secondary);
         visibility: hidden;
         /* if you have 8 or more links in your dropdown nav, uncomment the columns property to make the list into 2 even columns. Change it to 3 or 4 if you need extra columns. Then remove the transition delays on the cs-drop-li so they don't have weird scattered animations */
         // columns: 2;
@@ -827,7 +827,7 @@ import Settings from "./TemplateComponents/Settings.astro";
           content: "";
           width: 0%;
           height: 2px;
-          background: var(--primary);
+          background: var(--secondary);
           opacity: 1;
           display: block;
           position: absolute;
@@ -881,7 +881,7 @@ import Settings from "./TemplateComponents/Settings.astro";
 
         .cs-li-link {
           &:before {
-            background-color: var(--primaryLight);
+            background-color: var(--secondary);
           }
         }
       }
