--- a/src/routes/about.astro
+++ b/src/routes/about.astro
@@ -101,7 +101,7 @@ const optimizedGalImage1 = await getOptimizedImage(galImage1);
           <p class="cs-flex-p">
             {t("about-page.p-4")}
           </p>
-          <span class="cs-name">Pui</span>
+          <span class="cs-name">Ann</span>
           <span class="cs-job">{t("about-page.rank")}</span>
           <img
             class="cs-quote-icon"
@@ -132,14 +132,14 @@ const optimizedGalImage1 = await getOptimizedImage(galImage1);
                 </p>
             </li>
             <li class="cs-item">
-                <img class="cs-icon" loading="lazy" decoding="async" src="/assets/svgs/team.svg" alt="icon" width="120" height="120">
+                <img class="cs-icon" loading="lazy" decoding="async" src="/assets/svgs/personal.svg" alt="icon" width="120" height="120">
                 <h3 class="cs-h3">{t("common:about-page.ourStory.items.1.heading")}</h3>
                 <p class="cs-item-text">
                     {t("common:about-page.ourStory.items.1.p")}
                 </p>
             </li>
             <li class="cs-item">
-                <img class="cs-icon" loading="lazy" decoding="async" src="/assets/svgs/spa.svg" alt="icon" width="120" height="120">
+                <img class="cs-icon" loading="lazy" decoding="async" src="/assets/svgs/bag.svg" alt="icon" width="120" height="120">
                 <h3 class="cs-h3">{t("common:about-page.ourStory.items.2.heading")}</h3>
                 <p class="cs-item-text">
                     {t("common:about-page.ourStory.items.2.p")}
@@ -187,7 +187,6 @@ const optimizedGalImage1 = await getOptimizedImage(galImage1);
       }
 
       .cs-picture {
-        border-radius: (24/16em);
         display: block;
         position: absolute;
         /* clips img tag corners */
@@ -248,7 +247,6 @@ const optimizedGalImage1 = await getOptimizedImage(galImage1);
         /* 16px - 32px */
         padding: clamp(1rem, 3vw, 2rem);
         background-color: var(--sectionColor);
-        border-radius: (16/16rem);
         position: relative;
       }
 
