--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -35,8 +35,8 @@ const { title, image } = Astro.props
                 content: "";
                 width: 100%;
                 height: 100%;
-                background: #291a13;
-                opacity: 0.7;
+                background: #091a0c;
+                opacity: 0.6;
                 display: block;
                 position: absolute;
                 top: 0;
