--- a/src/routes/massages.astro
+++ b/src/routes/massages.astro
@@ -82,7 +82,7 @@ const optimizedMassageImage4 = await getOptimizedImage(massageImage4);
                 <li class="cs-menu-item">
                     <h3 class="cs-h3">
                         <span class="cs-header">{t("massages:pricing2.items.0.name")}</span>
-                        <span class="cs-price">€35</span>
+                        <span class="cs-price"><s>€40</s> €35</span>
                     </h3>
                     <p class="cs-menu-text">
                         {t("massages:pricing2.items.0.description")}
