--- a/src/routes/index.astro
+++ b/src/routes/index.astro
@@ -214,6 +214,88 @@ const optimizedFaqImage = await getOptimizedImage(faqImage);
 </section>
 
 <!-- ============================================ -->
+<!--                  Gallery                     -->
+<!-- ============================================ -->
+
+<section id="gallery-1182">
+    <div class="cs-container">
+        <div class="cs-gallery">
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/gallery/gal1-m.webp">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/gallery/gal1.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gallery/gal1.jpg" alt="front desk" width="480" height="549">
+            </picture>
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/gallery/gal2-m.webp">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/gallery/gal2.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gallery/gal2.jpg" alt="owner" width="480" height="549">
+            </picture>
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/gallery/gal3-m.webp">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/gallery/gal3.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gallery/gal3.jpg" alt="massage room" width="480" height="549">
+            </picture>
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/gallery/gal4-m.webp">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/gallery/gal4.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gallery/gal4.jpg" alt="massage room" width="480" height="549">
+            </picture>
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/gallery/gal5-m.webp">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/gallery/gal5.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gallery/gal5.jpg" alt="massage room" width="480" height="549">
+            </picture>
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/gallery/gal6-m.webp">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/gallery/gal6.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gallery/gal6.jpg" alt="lamp" width="480" height="549">
+            </picture>
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/gallery/gal7-m.webp">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/gallery/gal7.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gallery/gal7.jpg" alt="flowers and furniture" width="480" height="549">
+            </picture>
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/gallery/gal8-m.webp">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/gallery/gal8.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gallery/gal8.jpg" alt="golden elephants" width="480" height="549">
+            </picture>
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/gallery/gal9-m.webp">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/gallery/gal9.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gallery/gal9.jpg" alt="owner" width="480" height="549">
+            </picture>
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/gallery/gal10-m.webp">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/gallery/gal10.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gallery/gal10.jpg" alt="entrance" width="480" height="549">
+            </picture>
+        </div>
+    </div>
+</section>
+                                
+
+<!-- ============================================ -->
 <!--                 Side By Side                 -->
 <!-- ============================================ -->
 <section id="sbs-867">
@@ -1082,6 +1164,100 @@ for (const item of faqItems) {
         }
     }
 }
+
+/*-- -------------------------- -->
+<---          Gallery           -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    #gallery-1182 {
+        padding: var(--sectionPadding);
+        padding-top: 0;
+        padding-left: 0;
+        padding-right: 0;
+
+        .cs-container {
+            width: 100%;
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* 48px - 64px */
+            gap: clamp(3rem, 6vw, 4rem);
+        }
+
+        .cs-content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: center;
+            width: 100%;
+            padding: 0 (16/16rem);
+            /* prevents padding and border from affecting height and width */
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: center;
+        }
+
+        .cs-title {
+            margin: 0;
+        }
+
+        .cs-gallery {
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(10, 1fr);
+            /* 16px - 20px */
+            gap: clamp(1rem, 2vw, 1.25rem);
+        }
+
+        .cs-picture {
+            width: 100%;
+            height: 67vw;
+            /* makes it square */
+            aspect-ratio: 1;
+            display: block;
+            grid-column: span 5;
+            grid-row: span 1;
+            position: relative;
+
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+}
+
+/* Tablet - 650px */
+@media only screen and (min-width: 40.625rem) {
+    #gallery-1182 {
+        flex-direction: row;
+
+        .cs-picture {
+            grid-column: span 2;
+            height: 23vw;
+        }
+    }
+}
+
+/* Dark Mode */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode {
+        #gallery-1182 {
+            .cs-title {
+                color: var(--bodyTextColorWhite);
+            }
+        }
+    }
+}
+
+                                
                                 
 /*-- -------------------------- -->
 <---       Side By Side         -->
