--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -38,6 +38,9 @@ const currentYear = getCurrentYear();
           <li>
             <a href={getLocalePath("/thai-solution-massage")}>{t("Thai Solution Massage")}</a>
           </li>
+          <li>
+            <a href={getLocalePath("/privacy-policy")}>{t("footer.privacyPolicy")}</a>
+          </li>
         </ul>
         <ul>
           <li>
