terms and corrections

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,6 +41,12 @@ const currentYear = getCurrentYear();
           <li>
             <a href={getLocalePath("/privacy-policy")}>{t("footer.privacyPolicy")}</a>
           </li>
+          <li>
+            <a href={getLocalePath("/legal-notice")}>{t("footer.legal")}</a>
+          </li>
+          <li>
+            <a href={getLocalePath("/terms")}>{t("footer.terms")}</a>
+          </li>
         </ul>
         <ul>
           <li>
