--- a/src/routes/massages.astro
+++ b/src/routes/massages.astro
@@ -138,6 +138,15 @@ const optimizedMassageImage4 = await getOptimizedImage(massageImage4);
                         {t("massages:pricing3.items.2.description")}
                     </p>
                 </li>
+                <li class="cs-menu-item">
+                    <h3 class="cs-h3">
+                        <span class="cs-header">{t("massages:pricing3.items.3.name")}</span>
+                        <span class="cs-price"><s>€80</s> €70</span>
+                    </h3>
+                    <p class="cs-menu-text">
+                        {t("massages:pricing3.items.3.description")}
+                    </p>
+                </li>
             </ul>
         </div>
         <picture class="cs-picture">
@@ -188,6 +197,15 @@ const optimizedMassageImage4 = await getOptimizedImage(massageImage4);
                         {t("massages:pricing4.items.2.description")}
                     </p>
                 </li>
+                <li class="cs-menu-item">
+                    <h3 class="cs-h3">
+                        <span class="cs-header">{t("massages:pricing4.items.3.name")}</span>
+                        <span class="cs-price"><s>€105</s> €90</span>
+                    </h3>
+                    <p class="cs-menu-text">
+                        {t("massages:pricing4.items.3.description")}
+                    </p>
+                </li>
             </ul>
         </div>
         <picture class="cs-picture">
@@ -236,6 +254,15 @@ const optimizedMassageImage4 = await getOptimizedImage(massageImage4);
                     </h3>
                     <p class="cs-menu-text">
                         {t("massages:pricing5.items.2.description")}
+                    </p>
+                </li>
+                <li class="cs-menu-item">
+                    <h3 class="cs-h3">
+                        <span class="cs-header">{t("massages:pricing5.items.3.name")}</span>
+                        <span class="cs-price"><s>€125</s> €105</span>
+                    </h3>
+                    <p class="cs-menu-text">
+                        {t("massages:pricing5.items.3.description")}
                     </p>
                 </li>
             </ul>
